classDiagram
    %% Definición de la clase base Persona
    class Persona {
        -String rut
        -String nombre
        -String apellido
        -int edad
        +getter
        +setter
    }

    class CentroMedico {
        -String nombre
        -String RUT
        -String razonSocial
        +getter
        +setter
    }
    class Medico {
        +Especialidad especialidad
    }
    class Paciente {
        -String direccion
        -String telefono
        +TipoSeguridad tipoSeguridad
        +getter
        +setter
    }
    class Secretaria {
        -String horaLlegada
        -String horaSalida
    }
    class FichaMedica {
        -String idPaciente
        -int edad
        -String direccion
        +getter
        +setter
    }
    class DatosContacto {
        -String correo
        -String email
        +getter
        +setter
    }
    class Notacion {
        -Date fecha
        -String sintomas
        -String diagnostico
    }
    class Procedimiento {
        -String descripcion
        -float valor
    }

    %% Enumerados
    class Especialidad {
        <<enumeration>>
        -Cardiologia
        -Pediatria
        -Traumatologia
        -Neurologia
    }
    class TipoSeguridad {
        <<enumeration>>
        -FONASA
        -ISAPRE
    }

    %% Relaciones: herencia, asociación y composición
    Persona <|-- Medico
    Persona <|-- Paciente
    Persona <|-- Secretaria

    CentroMedico "1" o-- "0..*" Medico     : 
    CentroMedico "1" o-- "0..*" Paciente     : 
    CentroMedico "1" o-- "0..*" Secretaria   : 

    Paciente    "1" --> "1" FichaMedica      : 
    FichaMedica "1" *-- "1" DatosContacto   : 
    FichaMedica "1" *-- "0..*" Notacion      : 
    Notacion    "1" *-- "0..1" Procedimiento : g